--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -1,24 +1,97 @@
+* {
+    margin: 0;
+    padding: 0;
+    color: white;
+  }
+
 body{
+    background-image: url(../img/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
     
 }
-main{
-    width: 60%;
-    margin: 10px auto;
-    text-align: center;
-    background-color: rgb(202, 200, 200);
-    padding: 20px;
-    border-radius: 15px;
+/**********************************/
+/* 1. Header
+/**********************************/
+.menu-bg{
+	background-color: black;
 }
 
+.menu{
+	display:flex;
+	align-items: center;
+	justify-content: space-between;
+	max-width: 960px;
+	margin: 0 auto;
+	flex-wrap: wrap;	
+}
+
+.menu_logo{
+	margin: 10px;
+}
+
+.nav_list {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.nav_link {
+    padding: 20px 10px;
+    color: white;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.container {
+  max-width: 1130px;
+  margin: 0 auto;
+}
+
+.nav_list ol  {
+  list-style: none;
+  margin-left: 20px;
+  display: inline-block;
+  background: #ffa500;
+  color: white;
+  align-self: flex-start;
+  padding: 8px 18px;
+  text-decoration: none;
+  border-radius: 3px;
+}
+/**********************************/
+/* 2. Parte Principal do body
+/**********************************/
+main{
+    width: 60%;
+    margin: 20px auto;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 20px;
+    border-radius: 15px;
+    color: whitesmoke;
+    font-family: sans-serif;
+    font-size: 22px;
+}
+form{
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
 .btn {
     border: 1px solid #ced4da;
     padding: 2px 5px;
     background-color: rgb(255, 255, 255);
     height: 37px;
 }
+
 .fas{
     font-size: 1.5rem;
 }
+
 .check{
     display: none;
 }
@@ -27,6 +100,78 @@ main{
     display: flex;
     gap: 5px;
 }
+
 .buscacep{
-    font-size: 10px;
+    font-size: 12px;
+    background-color: rgba(246, 246, 246,0.8);
+    border-radius: .25rem;
+    border: 0.5px solid black;
+
 }
+
+.btnCadastrar{
+    background: #ffa500;
+    color: rgb(255, 255, 255);
+    align-self: flex-start;
+    padding: 8px 45px;
+    border-radius: 3px;
+    text-shadow: 3px 3px 3px black;
+    font-weight: bold;
+    font-size: 18px;
+    margin: 10px auto;
+}
+
+.btnCadastrar:hover{
+    font-size: 1.2em;
+    transition: 400ms;
+}
+/**********************************/
+/* 2. Parte Principal do body
+/**********************************/
+.footer {
+    padding: 1.5rem 0 1.5rem 0;
+    border-top: 8px solid #222;
+    background: black;
+    text-align: center;
+    display: grid;
+    justify-items: center;
+  }
+.linksFooter{
+    display: flex;
+}
+.linksFooter a, .linksFooter span{
+    color: white;
+    text-decoration: none;    
+    font-size: 20px;
+    margin-right: 35px;
+    font-weight: 600;
+}
+  
+  .footer p {
+    margin-top: 2rem;
+    color: #757575;
+    font-size: 13px;
+  }
+
+  @media (max-width: 767px){
+      .menu{
+          max-width: 100%;    
+          justify-content: center;
+        }
+        main {
+            width: 100%;
+            font-size: 15px;
+        }
+        .nav_list ol{
+            display: none;
+        }
+        .linksFooter a{
+            display: flex;
+            justify-content: space-evenly;
+            margin: 0 10px;
+            width: 100%;
+        }
+        .linksFooter span{
+            display: none;
+        }
+  }
