--- a/css/style.css
+++ b/css/style.css
@@ -429,3 +429,13 @@ background-position: 0% 50%;
             display: none;
         }
 }*/
+
+.scrollButton{
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 20px;
+  bottom: 30px;
+  z-index: 999;
+  cursor: pointer;
+}
