--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -122,6 +122,28 @@ form{
 
 }
 
+#msg-error{
+    text-align: center;
+    margin-bottom: 10px;
+    color: #ff0000;
+    background-color: #ffbbbb;
+    padding: 10px;
+    border-radius: 4px;
+    display: none;
+    transition: 1s;
+}
+
+#msg-success{
+    text-align: center;
+    margin-bottom: 10px;
+    color: #00bb00;
+    background-color: #bbffbe;
+    padding: 10px;
+    border-radius: 4px;
+    display: none;
+    transition: 1s;
+}
+
 .btnCadastrar{
     background: #ffa500;
     color: rgb(255, 255, 255);
@@ -132,6 +154,7 @@ form{
     font-weight: bold;
     font-size: 18px;
     margin: 10px auto;
+    cursor: pointer;
 }
 
 .btnCadastrar:hover{
