--- a/css/contato.css
+++ b/css/contato.css
@@ -15,54 +15,109 @@ body{
 /**********************************/
 /* 2. Estilizando o Header
 /**********************************/
-.menu-bg{
-	background-color: black;
-}
-
-.menu{
-	display:flex;
-	align-items: center;
-	justify-content: space-around;
-	/* max-width: 960px; */
-	margin: 0 auto;
-	flex-wrap: wrap;	
-}
-
-.gif{
-	margin: 10px;
-  border-radius: 5px;
-}
-
-.nav_list {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.nav_link {
-    padding: 20px 10px;
-    color: white;
-}
-
-img {
-  
-  max-width: 100%;
-}
-
-.container {
-  max-width: 1130px;
-  margin: 0 auto;
-}
-
-.nav_list ol  {
-  list-style: none;
-  margin-left: 20px;
-  display: inline-block;
-  background: #ffa500;
-  color: white;
-  align-self: flex-start;
-  padding: 8px 18px;
+a {
+  color: #ffa500;
   text-decoration: none;
-  border-radius: 3px;
+  transition: 0.3s;
+}
+
+a:hover {
+  opacity: 0.7;
+}
+
+.logo {
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  color: #FFA500;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: sans-serif;
+  background: #23232e;
+  height: 8vh;
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+}
+
+.nav-list li {
+  letter-spacing: 3px;
+  margin-left: 32px;
+}
+
+.mobile-menu {
+  display: none;
+  cursor: pointer;
+ 
+}
+
+.mobile-menu div {
+  width: 32px;
+  height: 2px;
+  background: #fff;
+  margin: 8px;
+  transition: 0.3s;
+}
+
+/*teste*/
+
+@media (max-width: 999px) {
+  body {
+    overflow-x: hidden;
+  }
+  .nav-list {
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    width: 50vw;
+    height: 92vh;
+    background: #23232e;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
+  }
+  .nav-list li {
+    margin-left: 0;
+    opacity: 0;
+  }
+  .mobile-menu {
+    display: block;
+  }
+}
+
+.nav-list.active {
+  transform: translateX(0);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.mobile-menu.active .line1 {
+  transform: rotate(-45deg) translate(-8px, 8px);
+}
+
+.mobile-menu.active .line2 {
+  opacity: 0;
+}
+
+.mobile-menu.active .line3 {
+  transform: rotate(45deg) translate(-5px, -7px);
 }
 
 
@@ -70,7 +125,7 @@ img {
 /* 3. Ajustando o main
 /**********************************/
 main{
-    width: 95%;
+    width: 90%;
     margin: 20px auto;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.7);
@@ -102,14 +157,15 @@ h1{
 .grupoImg {
     
     border-radius: 70px;
-    width: 50%;
+    width: 100px;
+    height: 100px;
     box-shadow: 2px 2px 1px cyan;  
 }
 /**********************************/
 /* 7. estilizando os parágrafos
 /**********************************/
 div p, h2{
-    padding: 10px 0 20px;
+    padding: 0px 0 5px;
     text-shadow: 1px 1px 1px cyan;
 }
 /**********************************/
