--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -12,62 +12,11 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
-    
+    background-attachment: fixed;    
 }
+
 /**********************************/
-/* 2. Header
-/**********************************/
-.menu-bg{
-	background-color: black;
-}
-
-.menu{
-	display:flex;
-	align-items: center;
-	justify-content: space-between;
-	max-width: 960px;
-	margin: 0 auto;
-	flex-wrap: wrap;	
-}
-
-.menu_logo{
-	margin: 10px;
-}
-
-.nav_list {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.nav_link {
-    padding: 20px 10px;
-    color: white;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-}
-
-.container {
-  max-width: 1130px;
-  margin: 0 auto;
-}
-
-.nav_list ol  {
-  list-style: none;
-  margin-left: 20px;
-  display: inline-block;
-  background: #ffa500;
-  color: white;
-  align-self: flex-start;
-  padding: 8px 18px;
-  text-decoration: none;
-  border-radius: 3px;
-}
-/**********************************/
-/* 3. Ajustando o main
+/* 2. Main
 /**********************************/
 main{
     width: 60%;
@@ -81,25 +30,20 @@ main{
     font-size: 22px;
 }
 /**********************************/
-/* 4. Estilizando o h2
+/* 3. H2
 /**********************************/
 h2{
     text-shadow: 1px 1px 1px cyan;
     padding-top: 5px;
+    margin-bottom: 10px;
 }
 /**********************************/
-/* 5. Ajusatando o formulário
+/* 4. Ajusatando o formulário
 /**********************************/
 form{
-    margin-top: 30px;
-    margin-bottom: 20px;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
-/* .btn {
-    border: 1px solid #ced4da;
-    padding: 2px 5px;
-    background-color: rgb(255, 255, 255);
-    height: 37px;
-} */
 
 .fas{
     font-size: 1.5rem;
@@ -112,6 +56,9 @@ form{
 #cep{
     display: flex;
     gap: 5px;
+}
+label > span{
+  font-size: 15px ;
 }
 
 .buscacep{
@@ -161,53 +108,3 @@ form{
     font-size: 1.2em;
     transition: 400ms;
 }
-/**********************************/
-/* 2. Parte Principal do body
-/**********************************/
-.footer {
-    padding: 1.5rem 0 1.5rem 0;
-    border-top: 8px solid #222;
-    background: black;
-    text-align: center;
-    display: grid;
-    justify-items: center;
-  }
-.linksFooter{
-    display: flex;
-}
-.linksFooter a, .linksFooter span{
-    color: white;
-    text-decoration: none;    
-    font-size: 20px;
-    margin-right: 35px;
-    font-weight: 600;
-}
-  
-  .footer p {
-    margin-top: 2rem;
-    color: #757575;
-    font-size: 13px;
-  }
-
-  @media (max-width: 767px){
-      .menu{
-          max-width: 100%;    
-          justify-content: center;
-        }
-        main {
-            width: 100%;
-            font-size: 15px;
-        }
-        .nav_list ol{
-            display: none;
-        }
-        .linksFooter a{
-            display: flex;
-            justify-content: space-evenly;
-            margin: 0 10px;
-            width: 100%;
-        }
-        .linksFooter span{
-            display: none;
-        }
-  }
