--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -108,3 +108,10 @@ label > span{
     font-size: 1.2em;
     transition: 400ms;
 }
+
+@media (max-width: 767px) {
+    main {
+        width: 100%;
+        font-size: 15px;
+      }    
+}
