--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    color: white;
   }
 /**********************************/
 /* 1. Estilizando o Body 
@@ -40,9 +39,10 @@ h2{
 /**********************************/
 /* 4. Ajusatando o formulário
 /**********************************/
-form{
+.formulario{
   margin-top: 30px;
   margin-bottom: 20px;
+  color: white;
 }
 
 .fas{
@@ -66,7 +66,7 @@ label > span{
     background-color: rgba(246, 246, 246,0.8);
     border-radius: .25rem;
     border: 0.5px solid black;
-
+    text-shadow: 1px 1px 1px black;
 }
 
 #msg-error{
@@ -109,9 +109,117 @@ label > span{
     transition: 400ms;
 }
 
+/**********************************/
+/* 5. Responsivo
+/**********************************/
 @media (max-width: 767px) {
     main {
         width: 100%;
         font-size: 15px;
       }    
+    a {
+      color: #ffa500;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    
+    a:hover {
+      opacity: 0.7;
+    }
+    
+    .logo {
+      font-size: 24px;
+      text-transform: uppercase;
+      letter-spacing: 4px;
+      color: #FFA500;
+    }
+    
+    nav {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      font-family: sans-serif;
+      background: #23232e;
+      height: 8vh;
+    }
+    
+    .nav-list {
+      list-style: none;
+      display: flex;
+    }
+    
+    .nav-list li {
+      letter-spacing: 3px;
+      margin-left: 32px;
+    }
+    
+    .mobile-menu {
+      display: none;
+      cursor: pointer;
+    }
+    
+    .mobile-menu div {
+      width: 32px;
+      height: 2px;
+      background: #fff;
+      margin: 8px;
+      transition: 0.3s;
+    }
+    
+   
+    body {
+      overflow-x: hidden;
+    }
+    .nav-list {
+      position: absolute;
+      top: 8vh;
+      right: 0;
+      width: 50vw;
+      height: 92vh;
+      background: #23232e;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      transform: translateX(100%);
+      transition: transform 0.3s ease-in;
+    }
+    .nav-list li {
+      margin-left: 0;
+      opacity: 0;
+    }
+    .mobile-menu {
+      display: block;
+    }
+    
+    .nav-list.active {
+      transform: translateX(0);
+      height: 200px;
+      width: 200px;
+      border-radius: 0 0 8px 8px;
+      border-left: 1px solid white;
+      border-bottom: 1px solid white;
+    }
+    
+    @keyframes navLinkFade {
+      from {
+        opacity: 0;
+        transform: translateX(50px);
+      }
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+    
+    .mobile-menu.active .line1 {
+      transform: rotate(-45deg) translate(-8px, 8px);
+    }
+    
+    .mobile-menu.active .line2 {
+      opacity: 0;
+    }
+    
+    .mobile-menu.active .line3 {
+      transform: rotate(45deg) translate(-5px, -7px);
+  }
 }
