--- a/css/infoDeFilmes.css
+++ b/css/infoDeFilmes.css
@@ -3,199 +3,84 @@
 com uma figura de background
 /**********************************/
 body{
-  background-image: url(../img/bg.jpg);
-  background-repeat: no-repeat;
-  background-size:cover;
-  background-position: center;
-  background-attachment: fixed;
-  font-family: sans-serif;
-  color: white;
+  background-color: black;
+  
 }
  
-/**********************************/
-/* 2. Estilizando o Header
-/**********************************/
-.menu-bg{
-	background-color: black;
-}
-
-.menu{
-	display:flex;
-	align-items: center;
-	justify-content: space-around;
-	/* max-width: 960px; */
-	margin: 0 auto;
-	flex-wrap: wrap;	
-}
-
-.gif{
-	margin: 10px;
-  border-radius: 5px;
-}
-
-.nav_list {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.nav_link {
-    padding: 20px 10px;
-    color: white;
-}
-
-img {
-  width: 100px;
-  /*height: 150px;*/
-}
-
-.container {
-  max-width: 1130px;
-  margin: 0 auto;
-}
-
-.nav_list ol  {
-  list-style: none;
-  margin-left: 20px;
-  display: inline-block;
-  background: #ffa500;
-  color: white;
-  align-self: flex-start;
-  padding: 8px 18px;
-  text-decoration: none;
-  border-radius: 3px;
-}
-
 
 /**********************************/
-/* 3. Ajustando o main
+/* 2. Ajustando o main
 /**********************************/
 main{
     width: 95%;
     margin: 20px auto;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.7);
-
+    color: white;
 }
+
 /**********************************/
-/* 4. Estilizando o h1
+/* 3. Estilizando o h1
 /**********************************/
 h1{
     text-shadow: 1px 1px 1px cyan;
     font-size: 54px;
     padding-top: 5px;  
 }
+
 /**********************************/
-/* 5. Ajusatando o container
+/* 4. Ajusatando o container
 /**********************************/
 .container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-top: 30px;
-    align-items: center;
-    width: 100%;  
-    min-height: 400px;
-}
-
-form{
   display: flex;
-  align-items:flex-start;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding-top: 30px;
+  align-items: center;
   width: 100%;
+  min-height: 400px;
 }
 
-form > div{
-  margin:0;
-}
-.btnCadastrar{
-  background: #ffa500;
-  color: rgb(255, 255, 255);
-  align-self: flex-start;
-  padding: 2px 45px;
-  border-radius: 8px;
-  text-shadow: 3px 3px 3px black;
-  font-weight: bold;
-  font-size: 18px;
-  /*margin: 10px auto;*/
-  cursor: pointer;
-  height: 38px;
-}
+
 /**********************************/
-/* 6. Estilizando a div media
+/* 5. Estilizando a div media
 /**********************************/
 .media{
-  display: none;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   width: 680px;
   padding-top: 15px;
 }
 
 
 /**********************************/
-/* 7. estilizando os parágrafos
+/* 6. Estilizando os parágrafos
 /**********************************/
-div p, h2{
-    padding: 10px 0 20px;
+div p{
+    padding: 10px 0 ;
     text-shadow: 1px 1px 1px cyan;
 }
 /**********************************/
-/* 8. Estilizando os ícones das redes sociais
+/* 7. Estilizando o poster
 /**********************************/
-
-/**********************************/
-/* 9. Estilizando o footer
-/**********************************/
-
-.footer {
-    padding: 1.5rem 0 1.5rem 0;
-    border-top: 8px solid #222;
-    background: black;
-    text-align: center;
-    display: grid;
-    justify-items: center;
-  }
-.linksFooter{
-    display: flex;
+.mediaImg{
+  width: 350px;
+  height: 450px;
+  transition: 0.5s;
 }
-.linksFooter a, .linksFooter span{
-    color: white;
-    text-decoration: none;    
-    font-size: 20px;
-    padding: 0 20px 0 20px;
-    font-weight: 600;
+
+.mediaImg:hover{
+  width: 360px;
+  height: 460px;
 }
-  
-  .footer p {
-    margin-top: 2rem;
-    color: #757575;
-    font-size: 13px;
-  }
-
-
 
 /**********************************/
-/* 10. Responsivo
+/* 8. Responsivo
 /**********************************/
 @media (max-width: 767px){
   main {
     width: 100%;
     font-size: 15px;
-  }
-
-  .nav_list ol{
-    display: none;
-  }
-
-  .linksFooter a{
-    display: flex;
-    justify-content: space-evenly;
-    margin: 0 10px;
-    width: 100%;
-    font-size: 15px;
-    align-self: center;
-  }
-
-  .linksFooter span{
-    display: none;
   }
 
   h1{
@@ -205,41 +90,27 @@ div p, h2{
 
   .container{
     display: flex;
+    flex-direction: column-reverse;
     align-items:stretch;
     padding-top: 10px;
     justify-content: flex-start;
   }
 
-  form{
-    display: flex;
-    align-items:center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    padding-bottom: 20px;
-  }
-
-  .btnCadastrar{
-    align-self: center;
-  }
-  
-  div.media{
+    
+  .media{
     display:flex;
     flex-direction: column;
     width: 100%;
     justify-content: center;
+    text-align: left;
   }
 
   .mediaImg {
     align-self: center;
     width: 100px;
-    height: 150px;
+    height: 180px;
   }
-  h5{
-    padding-top: 20px;
-    justify-items: center;
-    width: 100%;
-  }
+  
   
   p{
     align-self: center;
