--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 /* SCROLL DE IMAGENS
 /**********************************/
 bodyScroll{
-	font-family: sans-serif;
 	font-size: 16px;
 	margin: 0;
 	/*background: #fff;
@@ -16,25 +15,19 @@ bodyScroll{
 .imagem{
 	/*max-width: 80%;*/
   max-width:10px;
-    max-height:10px;
-    width: 100;
-    height: 100;
+  max-height:10px;
+  width: 100;
+  height: 100;
 }
 .gallery-wrap{
 	width:100%;
 	height: 65vh;
 	overflow:visible;
 	position: absolute;
-	/*background: #e2e8e9 ;
-	background: linear-gradient(149deg,#F7FD04 5%,#F9B208 25%,#FFA500 45%,#FC5404 75%);*/
-  opacity : 0.5
+  opacity : 0.5;
 }
 
-@media (max-width: 800px) {
-  .gallery-wrap  {
-  display: none;
-  } 
-  }
+
 .gallery-center{
 	position: absolute;
 	left: 50%;
@@ -116,7 +109,6 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-family: sans-serif;
   background: #23232e;
   height: 8vh;
 }
@@ -143,32 +135,6 @@ nav {
   background: #fff;
   margin: 8px;
   transition: 0.3s;
-}
-
-@media (max-width: 800px) {
-  body {
-    overflow-x: hidden;
-  }
-  .nav-list {
-    position: absolute;
-    top: 8vh;
-    right: 0;
-    width: 50vw;
-    height: 92vh;
-    background: #23232e;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    transform: translateX(100%);
-    transition: transform 0.3s ease-in;
-  }
-  .nav-list li {
-    margin-left: 0;
-    opacity: 0;
-  }
-  .mobile-menu {
-    display: block;
-  }
 }
 
 .nav-list.active {
@@ -199,11 +165,55 @@ nav {
 }
 
 /**********************************/
+/* . Carrosel 360º
+/**********************************/
+
+main {
+  background: linear-gradient(149deg,#F7FD04 5%,#F9B208 25%,#FFA500 45%,#FC5404 75%);
+  background-size: 400% 400%;
+  height: 92vh;
+  animation: colors 5s ease infinite ;
+}
+@keyframes colors{
+  0%{
+  background-position: 0% 50%;
+  }
+  50%{
+    background-position: 100% 50%;
+  }
+  100%{
+    background-position:0% 50% ;
+  }
+}
+.main-child {
+  z-index: 1;
+  display: grid;
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 5px;
+  color: #000000;
+  padding-top: 20px;
+}
+
+.main h1 {
+  font-size: 64px;
+  max-width: 510px;
+}
+
+.main span {
+  font-size: 26px;
+  margin-top: 10px;
+}
+
+/**********************************/
 /* . CARROSSELLL
 /**********************************/
 .carrosel{
   /*background-color: black;*/
-  background: #F9B208;
+  /* background: linear-gradient(to bottom, #FFA500 30%, black 50% ); */
+  padding: 10px auto;
+  background: linear-gradient(to bottom,#F7FD04 ,#F9B208 ,#FFA500 ,#743010 , black);
+  animation: colors 5s ease infinite ;
 }
 .wrapper{
   width: 100%;
@@ -212,32 +222,24 @@ nav {
   max-width: 900px;
   margin: auto;
   padding: 0 30px;
+  
 }
 .carousel .card{
   color: #ffa500;
   text-align: center;
-  margin: 20px 0;
+  margin: 10px 5px;
   line-height: 250px;
   font-size: 90px;
   font-weight: 600;
   border-radius: 10px;
   box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
 }
-.carousel .card-1{
-  background: #ed1c24;
+.owl-carousel .owl-item img {
+  display: block;
+  width: 100%;
+  border-radius: 10px;
 }
-.carousel .card-2{
-  background: #0072bc;
-}
-.carousel .card-3{
-  background: #39b54a;
-}
-.carousel .card-4{
-  background: #f26522;
-}
-.carousel .card-5{
-  background: #630460;
-}
+
 .owl-dots{
   text-align: center;
   margin-top: 40px;
@@ -256,104 +258,55 @@ nav {
 .owl-dot:hover{
   background: #ffa500;
 }
-/**********************************/
-/* . textos e imagens
-/**********************************/
-
-main {
-  background: linear-gradient(149deg,#F7FD04 5%,#F9B208 25%,#FFA500 45%,#FC5404 75%);
-  background-size: 400% 400%;
-  /*background: url("img/bg.jpg") no-repeat center center;*/
-  height: 92vh;
-  animation: colors 5s ease infinite ;
+.posters-filme{
+  position: relative;
+  width: 250px;
+  background-color: #0d0d11;
+  border-radius: 10px;
 }
-@keyframes colors{
-  0%{
-background-position: 0% 50%;
-  }
-  50%{
-    background-position: 100% 50%;
-  }
-  100%{
-    background-position:0% 50% ;
-  }
+.posters-filme h2{
+  position: absolute;
+  top: 29px;
+  left: 21px;
+  font-size: 32px;
+  display: none;
+  text-align: justify;
 }
-.main-child {
-  z-index: 1;
-  display: grid;
-  /*justify-items: center;*/
-  color: white;
-  text-align: center;
-  font-size: 2rem;
-  margin-bottom: 10px;
-  color: #ffa500;
-  /*text-shadow: 0.1em 0.1em 0.05em #FC5404*/
+.pSinopse{
+  position: absolute;
+  top: 30px;
+  font-size: 15px;
+  padding: 20px;
+  display: none;
 }
-
-.main h1 {
-  font-size: 64px;
-  max-width: 510px;
-}
-
-.main span {
-  font-size: 26px;
-  margin-top: 10px;
-}
-/*.section {
-  background: #FFA500;
-  padding: 3rem 0;
-  /*border-top: 4px solid #222;
- 
+.posters-filme:hover{
+  width: 260px;
+  transition: 1s;
 
 }
-
-.section h2 {
-  font-size: 50px;
-  margin-bottom: 16px;
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-.section p {
-  font-size: 26px;
-  padding: 0 10px;
-}
-
-/*.container{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
-  
-}
-.grid {
-  display: flex;
-  flex-wrap: wrap;
-  grid-template-columns: 1.1fr 1fr;
-  align-items: center;
-
-
-}
-.grid h2 {
-  color: #ff1e00;
-  font-size: 50px;
-  margin-bottom: 16px;
-  text-shadow: 0.1em 0.1em 0.05em #FC5404
-  flex: 6 1 160px;
-}
-.grid p{
-  font-size: 26px;
-  color: #ff1e00;
-  line-height: 21px;
-  padding: 0 10px;
-  display: grid;
-}
-.img-tv {
-  position:relative ;
+.posters-filme:hover h2{
   display: block;
-  max-width: 100%;
-  flex: 1 1 350px;
-}*/
+  transition: 1s;
+
+}
+.posters-filme:hover .pSinopse{
+  display: block;
+  transition: 1s;
+}
+.posters-filme:hover img{
+  transition: 1s;
+  opacity: 0.1;
+}
+.testedeimagem{
+  max-width: 300px;
+  min-height: 480px;
+  margin-right: 500px;
+}
+.carrosel .card{
+  line-height: 20px;
+  background-color: #23232e;
+}
+
 .somos{
 	padding: 0 40px;
 	margin: 0 auto;
@@ -398,61 +351,6 @@ background-position: 0% 50%;
 
 .download .img-tv {
   order: 1;
-}
-
-/**********************************/
-/* .CADASTRE-SE
-/**********************************/
-/*.form-cta {
-  margin-top: 0;
-  background: black;
-  padding: 3rem 0;
-  border-top: 8px solid #222;
-  text-align: center;
-}
-.form-cta input {
-  padding: 20px 10px;
-  font-size: 18px;
-  font-family: sans-serif;
-}
-.form-cta button{
-  padding: 20px 10px;
-  font-size: 18px;
-  font-family: sans-serif;
-}
-.form-cta button:after {
-  display: inline-block;
-  width: 10px;
-  height: 20px;
-  margin-left: 20px;
-}
-
-.form-cta button:hover{
-  background: #ffa500;
-  color: white;
-}*/
-
-
-/*@media  @media(max-width: 767px){
-.linksFooter a{
-            display: flex;
-            justify-content: space-evenly;
-            margin: 0 10px;
-            width: 100%;
-        }
-        .linksFooter span{
-            display: none;
-        }
-}*/
-
-.scrollButton{
-  width: 50px;
-  height: 50px;
-  position: fixed;
-  right: 20px;
-  bottom: 30px;
-  z-index: 999;
-  cursor: pointer;
 }
 
 
@@ -520,58 +418,13 @@ background-position: 0% 50%;
   transition: 1s;
 }
 
-.posters-filme{
-  position: relative;
-  width: 250px;
-  background-color: #0d0d11;
-}
-
-.posters-filme h2{
-  position: absolute;
-  top: 10px;
-  left: 50px;
-  font-size: 20px;
-  display: none;
-}
-
-.pSinopse{
-  position: absolute;
-  top: 30px;
-  font-size: 15px;
-  padding: 20px;
-  display: none;
- }
-
-.posters-filme:hover{
-  width: 260px;
-  transition: 1s;
-
-}
-
-.posters-filme:hover h2{
-  display: block;
-  transition: 1s;
-
-}
-.posters-filme:hover .pSinopse{
-  display: block;
-  transition: 1s;
-
-}
-
-.posters-filme:hover img{
-  transition: 1s;
-  opacity: 0.1;
-}
-
-.testedeimagem{
-  max-width: 300px;
-  min-height: 480px;
-  margin-right: 500px;
-}
 
 
-.carrosel .card{
-  line-height: 20px;
-  background-color: #23232e;
+@media (max-width: 767px) {
+  .gallery-wrap  {
+    display: none;
+  } 
+  .carousel{
+    padding: 0;
+  }
 }
