--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,11 @@ bodyScroll{
 }
 .gallery-wrap{
 	width:100%;
-	height: 65vh;
+	height: 57vh;
 	overflow:visible;
 	position: absolute;
   opacity : 0.5;
 }
-
-
 .gallery-center{
 	position: absolute;
 	left: 50%;
@@ -86,92 +84,13 @@ bodyScroll{
 
 
 /**********************************/
-/* . Menu/CABEÇALHO
-/**********************************/
-a {
-  color: #ffa500;
-  text-decoration: none;
-  transition: 0.3s;
-}
-
-a:hover {
-  opacity: 0.7;
-}
-
-.logo {
-  font-size: 24px;
-  text-transform: uppercase;
-  letter-spacing: 4px;
-  color: #FFA500;
-}
-
-nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background: #23232e;
-  height: 8vh;
-}
-
-.nav-list {
-  list-style: none;
-  display: flex;
-}
-
-.nav-list li {
-  letter-spacing: 3px;
-  margin-left: 32px;
-}
-
-.mobile-menu {
-  display: none;
-  cursor: pointer;
- 
-}
-
-.mobile-menu div {
-  width: 32px;
-  height: 2px;
-  background: #fff;
-  margin: 8px;
-  transition: 0.3s;
-}
-
-.nav-list.active {
-  transform: translateX(0);
-}
-
-@keyframes navLinkFade {
-  from {
-    opacity: 0;
-    transform: translateX(50px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-.mobile-menu.active .line1 {
-  transform: rotate(-45deg) translate(-8px, 8px);
-}
-
-.mobile-menu.active .line2 {
-  opacity: 0;
-}
-
-.mobile-menu.active .line3 {
-  transform: rotate(45deg) translate(-5px, -7px);
-}
-
-/**********************************/
 /* . Carrosel 360º
 /**********************************/
 
 main {
   background: linear-gradient(149deg,#F7FD04 5%,#F9B208 25%,#FFA500 45%,#FC5404 75%);
   background-size: 400% 400%;
-  height: 92vh;
+  height: 75vh;
   animation: colors 5s ease infinite ;
 }
 @keyframes colors{
@@ -208,10 +127,15 @@ main {
 /**********************************/
 /* . CARROSSELLL
 /**********************************/
+.wrapper h1{
+  font-size: 45px;
+  text-align: center;
+  text-shadow: 2px 2px 2px #CE5937;
+}
+
 .carrosel{
-  /*background-color: black;*/
-  /* background: linear-gradient(to bottom, #FFA500 30%, black 50% ); */
-  padding: 10px auto;
+  
+  padding: 23px;
   background: linear-gradient(to bottom,#F7FD04 ,#F9B208 ,#FFA500 ,#743010 , black);
   animation: colors 5s ease infinite ;
 }
@@ -221,7 +145,7 @@ main {
 .carousel{
   max-width: 900px;
   margin: auto;
-  padding: 0 30px;
+  padding: 35px 30px;
   
 }
 .carousel .card{
@@ -251,7 +175,7 @@ main {
   outline: none;
   border-radius: 14px;
   border: 2px solid #ffa500;
-  box-shadow: 0px 4px 15px /*rgba(0,0,0,0.2)*/#ff1e00;
+  box-shadow: 0px 0px 9px #ffa500;
   transition: all 0.1s ease;
 }
 .owl-dot.active,
@@ -264,20 +188,27 @@ main {
   background-color: #0d0d11;
   border-radius: 10px;
 }
+.posters-filme img{
+  height: 400px;
+}
 .posters-filme h2{
   position: absolute;
-  top: 29px;
-  left: 21px;
-  font-size: 32px;
+  top: 15px;
+  left: 15px;
+  font-size: 25px;
+  line-height: 30px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   display: none;
-  text-align: justify;
+  padding: 3px 10px ;
 }
 .pSinopse{
   position: absolute;
-  top: 30px;
-  font-size: 15px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  top: 100px;
+  font-size: 20px;
   padding: 20px;
   display: none;
+  text-align: justify;
 }
 .posters-filme:hover{
   width: 260px;
@@ -306,40 +237,38 @@ main {
   line-height: 20px;
   background-color: #23232e;
 }
-
 .somos{
-	padding: 0 40px;
-	margin: 0 auto;
-  background-color: #000000;
+	padding: 10px 230px;
+	background-color: #000000;
 }
 .somos h2{
   color: #ffa500;
   font-size: 50px;
   text-align: center;
-  margin-bottom: 20px;
 }
 .somos p{
-  font-size: 26px;
+  font-size: 30px;
   color: #ffa500;
-  line-height: 21.82px;
+  line-height: 45px;
   padding: 0 10px;
 }
 
 .somos-c{
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
 	align-items: center;
+  padding: 10px 100px;
 }
 
 .somos-c_texto{
-	flex: 6 1 160px;
-  padding: 0 40px;
+	/* flex: 6 1 160px; */
+  padding: 0 70px;
 }
 
 .somos-c_img{
-	flex: 1 1 350px;
+	/* flex: 1 1 350px; */
   margin: 10px auto;
-  padding: 0 40px;
+  padding: 10px 40px;
 }
 .img-tv img {
   position: relative;
@@ -421,10 +350,28 @@ main {
 
 
 @media (max-width: 767px) {
+  main{
+    height: 45vh;
+  }
+  .main-child{
+    font-size: 1.5em;
+    padding-top: 87px;
+  }  
   .gallery-wrap  {
     display: none;
   } 
   .carousel{
     padding: 0;
+  }
+  .somos{
+    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 20px;
+  }
+  .somos-c{
+    display: flex;
+    flex-direction: column;
   }
 }
