--- a/css/recuperarSenha.css
+++ b/css/recuperarSenha.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 /**********************************/
 /* 1. Estilizando o Body 
 com uma figura de background
@@ -66,11 +70,31 @@ img {
 }
 
 
+.form-group input{
+  display: block;
+  margin-top: 5px;
+  padding: 5px;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+
+#msg-success{
+  text-align: center;
+  margin-bottom: 10px;
+  color: #00bb00;
+  background-color: #bbffbe;
+  padding: 10px;
+  border-radius: 4px;
+  display: none;
+  transition: 1s;
+}
+
 /**********************************/
 /* 3. Ajustando o main
 /**********************************/
 main{
     width: 95%;
+    height: 500px;
     margin: 20px auto;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.7);
